--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -42,7 +42,7 @@
 
         <!-- Contact form -->
 
-        <div class="jumbotron" id="contact-form-container">
+        <div class="jumbotron">
             <form>
                 <fieldset>
                     <legend id="email-input-text">Send us an email</legend>
