--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../../lib/bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../../lib/creative/css/component.css">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
@@ -17,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
+    <script src="../../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -39,12 +39,10 @@
             </div>
         </nav>
 
-        <!-- Contact form -->
-
         <div class="jumbotron">
             <form>
                 <fieldset>
-                    <legend id="email-input-text">Send us an email</legend>
+                    <legend id="email-input-text" class="card-header">SEND US AN EMAIL</legend>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -59,13 +57,11 @@
                         <textarea class="form-control" id="emailTextarea" rows="3"></textarea>
                     </div>
     
-                    <button type="submit" class="btn btn-warning">Send</button>
+                    <button type="submit" class="btn btn-warning" id="send-button">Send</button>
                 </fieldset>
             </form>
         </div>
     </div>
-
-    <script src="../../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
