Updated navigation between pages, search dropdown button and logo in the nav

--- a/src/views/book_list.html
+++ b/src/views/book_list.html
@@ -8,31 +8,26 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../../lib/creative/css/component.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="../../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
-                aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor02">
                 <div class="navbar-nav mx-auto">
-                    <a class="navbar-brand" href="#">Search</a>
-                    <a class="navbar-brand" href="#">Genres</a>
-                    <a class="navbar-brand" href="#">Contact</a>
-                    <a class="navbar-brand" href="#">FAQ</a>
+                    <a class="navbar-brand" href="#"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
+                    <a class="navbar-brand" href="../index.html">Search</a>
+                    <a class="navbar-brand" href="genres.html">Genres</a>
+                    <a class="navbar-brand" href="contact.html">Contact</a>
+                    <a class="navbar-brand" href="faq.html">FAQ</a>
                 </div>
             </div>
         </nav>
@@ -40,8 +35,7 @@
             <div class="list-group">
                 <a href="#first" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/the_ousider.jpg" alt="The outsider">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/the_ousider.jpg" alt="The outsider">
                         <div>
                             <h5 class="mb-1">THE OUTSIDER</h5>
                             <p class="mb-1">Stephen King</p>
@@ -54,8 +48,7 @@
                 </a>
                 <a href="#second" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/orient_express.png" alt="Murder on the Orient Express">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/orient_express.png" alt="Murder on the Orient Express">
                         <div>
                             <h5 class="mb-1">MURDER ON THE ORIENT EXPRESS</h5>
                             <p class="mb-1">Agatha Christie</p>
@@ -68,8 +61,7 @@
                 </a>
                 <a href="#third" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/clockwork_orange.jpg" alt="Clockwork orange">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/clockwork_orange.jpg" alt="Clockwork orange">
                         <div>
                             <h5 class="mb-1">CLOCKWORK ORANGE</h5>
                             <p class="mb-1">Anthony Burgess</p>
@@ -81,8 +73,7 @@
                 </a>
                 <a href="#fourth" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/pet_sematary.jpg" alt="1984">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/pet_sematary.jpg" alt="1984">
                         <div>
                             <h5 class="mb-1">PET SEMATARY</h5>
                             <p class="mb-1">Stephen King</p>
@@ -96,8 +87,7 @@
                 </a>
                 <a href="#fifth" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/1984.jpg" alt="1984">
+                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="../img/1984.jpg" alt="1984">
                         <div>
                             <h5 class="mb-1">1984</h5>
                             <p class="mb-1">George Orwell</p>
