--- a/src/views/genres.html
+++ b/src/views/genres.html
@@ -8,15 +8,9 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../../lib/creative/css/component.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="../../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </head>
 
@@ -25,71 +19,71 @@
     <div class="container">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
-                aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor02">
                 <div class="navbar-nav mx-auto" id="links">
-                    <a class="navbar-brand" href="#">Search</a>
-                    <a class="navbar-brand" href="#">Genres</a>
-                    <a class="navbar-brand" href="#">Contact</a>
-                    <a class="navbar-brand" href="#">FAQ</a>
+                    <a class="navbar-brand" href="#"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
+                    <a class="navbar-brand" href="../index.html">Search</a>
+                    <a class="navbar-brand" href="genres.html">Genres</a>
+                    <a class="navbar-brand" href="contact.html">Contact</a>
+                    <a class="navbar-brand" href="faq.html">FAQ</a>
                 </div>
             </div>
         </nav>
 
         <div class="jumbotron" id="genres-content">
-            
-          <div class="page-header">
+
+            <div class="page-header">
                 <legend class="card-header" id="genres">GENRES</legend>
             </div>
 
             <table class="table table-hover" id="genres-list">
                 <tbody>
-                  <tr class="table-dark">
-                    <td><span>Art</span></td>
-                    <td><span>Biography</span></td>
-                    <td><span>Business</span></td>
-                  </tr>
-                  <tr class="table-dark">
-                    <td><span>Classics</span></td>
-                    <td><span>Computers</span></td>
-                    <td><span>Crime</span></td>
-                  </tr>
-                  <tr class="table-dark">
-                    <td><span>Education</span></td>
-                    <td><span>Fiction</span></td>
-                    <td><span>Health</span></td>
-                  </tr>
-                  <tr class="table-dark">
-                    <td><span>History</span></td>
-                    <td><span>Horror</span></td>
-                    <td><span>Humor</span></td>
-                  </tr>
-                  <tr class="table-dark">
-                    <td><span>Law</span></td>
-                    <td><span>Love</span></td>
-                    <td><span>Medicine</span></td>
-                  </tr>
-                  <tr class="table-dark">
-                    <td><span>Nature</span></td>
-                    <td><span>Phylosophy</span></td>
-                    <td><span>Poetry</span></td>
-                  </tr>
-                  <tr class="table-dark">
-                    <td><span>Psychology</span></td>
-                    <td><span>Religion</span></td>
-                    <td><span>Romance</span></td>
-                  </tr>
-                  <tr class="table-dark">
-                    <td><span>Science Fiction</span></td>
-                    <td><span>Sports</span></td>
-                    <td><span>Teens</span></td>
-                  </tr>
+                    <tr class="table-dark">
+                        <td><span>Art</span></td>
+                        <td><span>Biography</span></td>
+                        <td><span>Business</span></td>
+                    </tr>
+                    <tr class="table-dark">
+                        <td><span>Classics</span></td>
+                        <td><span>Computers</span></td>
+                        <td><span>Crime</span></td>
+                    </tr>
+                    <tr class="table-dark">
+                        <td><span>Education</span></td>
+                        <td><span>Fiction</span></td>
+                        <td><span>Health</span></td>
+                    </tr>
+                    <tr class="table-dark">
+                        <td><span>History</span></td>
+                        <td><span>Horror</span></td>
+                        <td><span>Humor</span></td>
+                    </tr>
+                    <tr class="table-dark">
+                        <td><span>Law</span></td>
+                        <td><span>Love</span></td>
+                        <td><span>Medicine</span></td>
+                    </tr>
+                    <tr class="table-dark">
+                        <td><span>Nature</span></td>
+                        <td><span>Phylosophy</span></td>
+                        <td><span>Poetry</span></td>
+                    </tr>
+                    <tr class="table-dark">
+                        <td><span>Psychology</span></td>
+                        <td><span>Religion</span></td>
+                        <td><span>Romance</span></td>
+                    </tr>
+                    <tr class="table-dark">
+                        <td><span>Science Fiction</span></td>
+                        <td><span>Sports</span></td>
+                        <td><span>Teens</span></td>
+                    </tr>
                 </tbody>
-              </table> 
+            </table>
         </div>
     </div>
 </body>
