--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,9 @@
 /* Main file where author styles to be added */
+
 @font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+    font-family: 'Glyphicons Halflings';
+    src: url('../fonts/glyphicons-halflings-regular.eot');
+    src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
 body {
@@ -34,11 +35,13 @@ body {
     margin-bottom: 2%;
 }
 
-.cl-effect-14 a::before, .cl-effect-14 a::after {
+.cl-effect-14 a::before,
+.cl-effect-14 a::after {
     background: #f39c12 !important;
 }
 
-.navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
+.navbar-dark .navbar-brand:hover,
+.navbar-dark .navbar-brand:focus {
     color: #f39c12 !important;
 }
 
@@ -66,21 +69,45 @@ body {
 #send-button {
     float: right;
 }
+
 div.left-margin {
-  margin-left: 30px;
+    margin-left: 30px;
 }
-.input-group.md-form.form-sm.form-1 input{
+
+.input-group.md-form.form-sm.form-1 input {
     border: 1px solid #bdbdbd;
     border-top-right-radius: 0.25rem;
     border-bottom-right-radius: 0.25rem;
-  }
-  .input-group.md-form.form-sm.form-2 input {
+}
+
+.input-group.md-form.form-sm.form-2 input {
     border: 1px solid #bdbdbd;
     border-top-left-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem;
-  }
-  .input-group.md-form.form-sm.form-2 input.amber-border {
+}
+
+.input-group.md-form.form-sm.form-2 input.amber-border {
     border: 1px solid #ffca28;
-  }
-  
-  
+}
+
+#the-outsider-img {
+    height: auto;
+    width: 15%;
+    display: block;
+    float: left;
+    margin-right: 15px;
+}
+
+.logo-img {
+    width: 63px;
+    height: 27px;
+}
+
+#search-btn {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+#search-dropdown {
+    border-radius: 5px;
+}
