--- a/src/views/book_information.html
+++ b/src/views/book_information.html
@@ -8,31 +8,26 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../../lib/creative/css/component.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="../../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
-                aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor02">
                 <div class="navbar-nav mx-auto">
-                    <a class="navbar-brand" href="#">Search</a>
-                    <a class="navbar-brand" href="#">Genres</a>
-                    <a class="navbar-brand" href="#">Contact</a>
-                    <a class="navbar-brand" href="#">FAQ</a>
+                    <a class="navbar-brand" href="#"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
+                    <a class="navbar-brand" href="../index.html">Search</a>
+                    <a class="navbar-brand" href="genres.html">Genres</a>
+                    <a class="navbar-brand" href="contact.html">Contact</a>
+                    <a class="navbar-brand" href="faq.html">FAQ</a>
                 </div>
             </div>
         </nav>
@@ -47,16 +42,9 @@
                 </div>
             </div>
             <div class="card-body">
-                <p class="card-text"> <img
-                        style="height: auto; width: 15%; display: block; float: left; margin-right:15px;"
-                        src="../img/the_ousider.jpg" alt="The Outsider">
-                    In The Outsider, an unspeakable crime takes place involving the murder and violation of a small boy.
-                    Ralph Anderson is the detective on the case, and he arrests a local man, Terry Maitland. It’s an
-                    easy arrest and their evidence is airtight. The problem is, cracks in the case begin to appear when
-                    it seems that perhaps Maitland has an equally airtight alibi.
-
-                    As tensions rise and the investigation proceeds, the bit and pieces of information Ralph uncovers
-                    are equal parts horrifying and intriguing.</p>
+                <p class="card-text"> <img id="the-outsider-img" src="../img/the_ousider.jpg" alt="The Outsider"> In The Outsider, an unspeakable crime takes place involving the murder and violation of a small boy. Ralph Anderson is the detective on the case, and he arrests
+                    a local man, Terry Maitland. It’s an easy arrest and their evidence is airtight. The problem is, cracks in the case begin to appear when it seems that perhaps Maitland has an equally airtight alibi. As tensions rise and the investigation
+                    proceeds, the bit and pieces of information Ralph uncovers are equal parts horrifying and intriguing.</p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Genres</li>
