--- a/src/views/book_information.html
+++ b/src/views/book_information.html
@@ -17,13 +17,14 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
+            <a class="navbar-brand" id="logo-img-link" href="../index.html"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
+            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor02">
                 <div class="navbar-nav mx-auto">
-                    <a class="navbar-brand" href="#"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
                     <a class="navbar-brand" href="../index.html">Search</a>
                     <a class="navbar-brand" href="genres.html">Genres</a>
                     <a class="navbar-brand" href="contact.html">Contact</a>
