--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -18,13 +18,14 @@
     <div class="container">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
+            <a class="navbar-brand" id="logo-img-link" href="../index.html"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
+            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor02">
                 <div class="navbar-nav mx-auto" id="links">
-                    <a class="navbar-brand" href="#"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
                     <a class="navbar-brand" href="../index.html">Search</a>
                     <a class="navbar-brand" href="genres.html">Genres</a>
                     <a class="navbar-brand" href="contact.html">Contact</a>
@@ -43,7 +44,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputName">Name</label>
-                        <input type="password" class="form-control" id="exampleInputName" placeholder="Name">
+                        <input type="text" class="form-control" id="exampleInputName" placeholder="Name">
                     </div>
                     <div class="form-group">
                         <label for="emailTextarea">Text</label>
