--- a/src/views/faq.html
+++ b/src/views/faq.html
@@ -19,13 +19,14 @@
     <div class="container">
         <!-- navigation, to be included in a separate tag -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
+            <a class="navbar-brand" id="logo-img-link" href="../index.html"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
+            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor02">
                 <div class="navbar-nav mx-auto" id="links">
-                    <a class="navbar-brand" href="#"><img class="logo-img" src="../img/ibdb_logo.png" alt="Logo"></a>
                     <a class="navbar-brand" href="../index.html">Search</a>
                     <a class="navbar-brand" href="genres.html">Genres</a>
                     <a class="navbar-brand" href="contact.html">Contact</a>
@@ -37,27 +38,11 @@
         <!-- main content of the page -->
         <div class="jumbotron" id="heading">
 
+            <div class="page-header">
+                <legend class="card-header" id="faq">OTHERS ASKED</legend>
+            </div>
+
             <div class="card-columns">
-                <!--What is an ISBN-->
-                <div class="card border-warning mb-3" style="max-width: 20rem;">
-                    <div class="card-header">
-                        <h4 class="card-title">What is an ISBN?</h4>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">An ISBN is an International Standard Book Number. ISBNs were 10 digits in length up to the end of December 2006, but since 1 January 2007 they now always consist of 13 digits. ISBNs are calculated using a specific mathematical
-                            formula and include a check digit to validate the number.</p>
-                    </div>
-                </div>
-                <!--How to search book-->
-                <div class="card border-warning mb-3" style="max-width: 20rem;">
-                    <div class="card-header">
-                        <h4 class="card-title">How to search book?</h4>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">From the main page, you can search book by "ISBN", "Name of author" or "Name of book". You only have to choose the type of the search from the dropdown next to the search button, and enter the text. Hit the search button and enjoy
-                            the results.</p>
-                    </div>
-                </div>
                 <!--How to search books by genre-->
                 <div class="card border-warning mb-3" style="max-width: 20rem;">
                     <div class="card-header">
@@ -65,15 +50,6 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">If you want to search books by genre, simply press the button "Genre" from the navigation bar. Then list of all the genres are shown. When you choose the specific genre you want, list of the books from this genre are shown.</p>
-                    </div>
-                </div>
-                <!--How to read book-->
-                <div class="card border-warning mb-3" style="max-width: 20rem;">
-                    <div class="card-header">
-                        <h4 class="card-title">How to read book?</h4>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">First of all we have to say that not every book has it's eVersions. For those of them, which have, there is link from the book information page, which leads to external site, where you can read it.</p>
                     </div>
                 </div>
                 <!--How to contact us-->
@@ -86,6 +62,16 @@
                         </p>
                     </div>
                 </div>
+                <!--How to search book-->
+                <div class="card border-warning mb-3" style="max-width: 20rem;">
+                    <div class="card-header">
+                        <h4 class="card-title">How to search book?</h4>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">From the main page, you can search book by "ISBN", "Name of author" or "Name of book". You only have to choose the type of the search from the dropdown next to the search button, and enter the text. Hit the search button and enjoy
+                            the results.</p>
+                    </div>
+                </div>
                 <!--How to support us-->
                 <div class="card border-warning mb-3" style="max-width: 20rem;">
                     <div class="card-header">
@@ -95,6 +81,25 @@
                         <p class="card-text">If you want to support our project and us, contact us and we will give you PayPal our Patreon to donate.</p>
                     </div>
                 </div>
+                <!--What is an ISBN-->
+                <div class="card border-warning mb-3" style="max-width: 20rem;">
+                    <div class="card-header">
+                        <h4 class="card-title">What is an ISBN?</h4>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">An ISBN is an International Standard Book Number. ISBNs were 10 digits in length up to the end of December 2006, but since 1 January 2007 they now always consist of 13 digits. ISBNs are calculated using a specific mathematical
+                            formula and include a check digit to validate the number.</p>
+                    </div>
+                </div>
+                <!--How to read book-->
+                <div class="card border-warning mb-3" style="max-width: 20rem;">
+                    <div class="card-header">
+                        <h4 class="card-title">How to read book?</h4>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">First of all we have to say that not every book has it's eVersions. For those of them, which have, there is link from the book information page, which leads to external site, where you can read it.</p>
+                    </div>
+                </div>                
             </div>
         </div>
     </div>
