--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="../../lib/bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../../lib/creative/css/component.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="../../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+    <script src="../js/send-mail.js" defer></script>
 </head>
 
 <body>
@@ -34,21 +35,36 @@
             </div>
         </nav>
 
+        <!-- <div class="alert alert-dismissible alert-danger in">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong>Oh snap!</strong> and try submitting again.
+        </div> -->
+
+        <div class="toast" data-autohide="false">
+            <div class="toast-header">
+              <strong class="mr-auto text-danger" id="toast-header">Error Message</strong>
+              <small class="text-muted" id="toast-time"></small>
+              <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+            </div>
+            <div class="toast-body" id="toast-body">
+            </div>
+        </div>
+
         <div class="jumbotron">
             <form>
                 <fieldset>
                     <legend id="email-input-text" class="card-header">SEND US AN EMAIL</legend>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <input type="email" class="form-control" id="email-address" aria-describedby="emailHelp" placeholder="Enter email">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputName">Name</label>
-                        <input type="text" class="form-control" id="exampleInputName" placeholder="Name">
+                        <input type="text" class="form-control" id="name" placeholder="Name">
                     </div>
                     <div class="form-group">
                         <label for="emailTextarea">Text</label>
-                        <textarea class="form-control" id="emailTextarea" rows="3"></textarea>
+                        <textarea class="form-control" id="text" rows="3"></textarea>
                     </div>
 
                     <button type="submit" class="btn btn-warning" id="send-button">Send</button>
