--- a/src/views/book_list.html
+++ b/src/views/book_list.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../../lib/creative/css/component.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -42,97 +42,27 @@
             </div>
         </nav>
         <div class="jumbotron">
-            <div id="book-list" class="list-group">
-                <a href="#first" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/the_ousider.jpg" alt="The outsider">
-                        <div>
-                            <h5 class="mb-1">THE OUTSIDER</h5>
-                            <p class="mb-1">Stephen King</p>
-                            <small class="text-muted">“Reality is thin ice, but most people skate on it their whole
-                                lives and never fall through until the very end. We did fall through, but we helped each
-                                other out. We’re still helping each other.”</small>
-                        </div>
-                        <small class="text-muted">2 days ago</small>
-                    </div>
-                </a>
-                <a href="#second" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/orient_express.png" alt="Murder on the Orient Express">
-                        <div>
-                            <h5 class="mb-1">MURDER ON THE ORIENT EXPRESS</h5>
-                            <p class="mb-1">Agatha Christie</p>
-                            <small class="text-muted">“The impossible could not have happened, therefore the impossible
-                                must be possible in spite of appearances.”
-                                ― Agatha Christie, Murder on the Orient Express</small>
-                        </div>
-                        <small class="text-muted">3 days ago</small>
-                    </div>
-                </a>
-                <a href="#third" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/clockwork_orange.jpg" alt="Clockwork orange">
-                        <div>
-                            <h5 class="mb-1">CLOCKWORK ORANGE</h5>
-                            <p class="mb-1">Anthony Burgess</p>
-                            <small class="text-muted">“Is it better for a man to have chosen evil than to have good
-                                imposed upon him?”</small>
-                        </div>
-                        <small class="text-muted">5 days ago</small>
-                    </div>
-                </a>
-                <a href="#fourth" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/pet_sematary.jpg" alt="1984">
-                        <div>
-                            <h5 class="mb-1">PET SEMATARY</h5>
-                            <p class="mb-1">Stephen King</p>
-                            <small class="text-muted">“And the most terrifying question of all may be just how much
-                                horror the human mind can stand and still maintain a wakeful, staring, unrelenting
-                                sanity.”
-                            </small>
-                        </div>
-                        <small class="text-muted">6 days ago</small>
-                    </div>
-                </a>
-                <a href="#fifth" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="w-100 justify-content-between">
-                        <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;"
-                            src="../img/1984.jpg" alt="1984">
-                        <div>
-                            <h5 class="mb-1">1984</h5>
-                            <p class="mb-1">George Orwell</p>
-                            <small class="text-muted">“Perhaps one did not want to be loved so much as to be
-                                understood.”
-                            </small>
-                        </div>
-                        <small class="text-muted">10 days ago</small>
-                    </div>
-                </a>
-            </div>
+            <!-- The element to which the compiled handlebars template is attached -->
+            <div id="book-list" class="list-group"></div>
         </div>
     </div>
 
     <script id="book-list-template" type="text/x-handlebars-template">
-    <!-- TODO: Insert template here -->
 
+    {{#if isbn}}
     <a href="" class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="w-100 justify-content-between">
             <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="">
             <div>
-                <h5 class="mb-1">THE OUTSIDER</h5>
-                <p class="mb-1">Stephen King</p>
-                <small class="text-muted">“Reality is thin ice, but most people skate on it their whole
-                    lives and never fall through until the very end. We did fall through, but we helped each
-                    other out. We’re still helping each other.”</small>
+                <h5 class="mb-1">{{title}}</h5>
+                <p class="mb-1">{{author}}</p>
+                <p class="text-muted">ISBN: {{isbn}}</p>
             </div>
-            <small class="text-muted">2 days ago</small>
+            <small class="text-muted">{{last_modified}}</small>
         </div>
     </a>
+    {{/if}}
+
     </script>
 
     <script src="../js/render-book-list.js"></script>
