--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -57,6 +57,12 @@
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="email-address" aria-describedby="emailHelp" placeholder="Enter email">
+                    
+                        <div class="alert alert-dismissible alert-danger">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <strong>Oh snap!</strong> and try submitting again.
+                        </div>
+                    
                     </div>
                     <div class="form-group">
                         <label for="exampleInputName">Name</label>
