--- a/src/views/book_list.html
+++ b/src/views/book_list.html
@@ -42,6 +42,16 @@
             </div>
         </nav>
         <div class="jumbotron">
+            <!-- This is a bootstrap spinner loader and can be used anywhere needed -->
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border text-warning hidden" role="status" id="loading">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <strong class="hidden" id="loading-text">Loading...</strong>
+            </div>
+
             <!-- The element to which the compiled handlebars template is attached -->
             <div id="book-list" class="list-group"></div>
         </div>
