--- a/src/views/account.html
+++ b/src/views/account.html
@@ -39,7 +39,7 @@
                     <a class="navbar-brand" href="genres.html">Genres</a>
                     <a class="navbar-brand" href="contact.html">Contact</a>
                     <a class="navbar-brand" href="faq.html">FAQ</a>
-                    <a class="navbar-brand logged-out" href="login.html">Login/ Register</a>
+                    <a class="navbar-brand logged-out" href="login.html" style="display: none;">Login/ Register</a>
                     <a class="navbar-brand logged-in" href="">Account</a>
                 </div>
             </div>
