--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -88,7 +88,7 @@
                         <textarea class="form-control" id="text" rows="3"></textarea> -->
                         <div class="form-group has-danger">
                             <label class="form-control-label" for="text">Text</label>
-                            <textarea type="text" class="form-control is-invalid" id="text" placeholder="Enter your text"></textarea>
+                            <textarea type="text" class="form-control" id="text" placeholder="Enter your text"></textarea>
                             <div class="invalid-feedback">Please, fill in text area</div>
                         </div>
                     </div>
