--- a/src/views/book_list.html
+++ b/src/views/book_list.html
@@ -64,13 +64,13 @@
     {{#if isbn}}
     <a href="" class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="w-100 justify-content-between">
-            <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="">
+            <img style="height: auto; width: 90px; display: block; float: left; margin-right:15px;" src="http://covers.openlibrary.org/b/id/{{cover_id}}-L.jpg">
             <div>
                 <h5 class="mb-1">{{title}}</h5>
                 <p class="mb-1">{{author}}</p>
                 <p class="text-muted">ISBN: {{isbn}}</p>
             </div>
-            <small class="text-muted">{{last_modified}}</small>
+            <small class="text-muted">Last Modified: {{last_modified}}</small>
         </div>
     </a>
     {{/if}}
